fix(Trivia): change to row on tablet/mobile view

--- a/src/StockportWebapp/wwwroot/assets/sass/healthystockport/modules/_triviaSection.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/healthystockport/modules/_triviaSection.scss
@@ -9,6 +9,10 @@
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
+
+        @media #{$mobile, $tablet} {
+            display: block;
+        }
     }
 
     &__list-item {
